syntax = "proto3";

package rpc;

service OrderService {
    rpc EnterOrder(Order) returns (Response) {}
    rpc ShowOrders(ShowOrder) returns (stream Order) {}
}

message Order {
    int32 price = 2;
}

message ShowOrder {
}

message Response {
}
